Some serialization / API schema fixes
